# sst-cmake

./: CMakeLists.txt  CMakePresets.json
examples/: CMakeLists.txt
innosetup/: CMakeLists.txt  installer.iss
libs/: CMakeLists.txt
libs/catch2/: CMakeLists.txt  notes
libs/catch2/examples/: CMakeLists.txt  main.cpp
libs/filesystem/: CMakeLists.txt
libs/filesystem/examples/: CMakeLists.txt  main.cpp
libs/miniz/: CMakeLists.txt
libs/miniz-3.1.0/: CMakeLists.txt
libs/miniz-3.1.0/example/: CMakeLists.txt
libs/miniz/examples/: CMakeLists.txt
libs/strnatcmp/: CMakeLists.txt
libs/strnatcmp/examples/: CMakeLists.txt  main.cpp
libs/tinyxml2/: CMakeLists.txt
libs/tinyxml2/examples/: CMakeLists.txt
modules/: FindJUCE.cmake
